# football-scouting

./: README.md  main.py  pyproject.toml  setup.py  test.ipynb
src/: main.py  utils.py
src/gui/: state.py  update.py  view.py
src/lib/: player_data.py
src/lib/model/: player_data.py  player_model.py  player_snapshot.py
src/player_data/: data_loading.py  data_transform.py  player_data.py
src/server/: constants.py  load_database.py  main.py  services.py  utils.py
src/web_client/: main.py  server_test.py
src/web_client/gui/: state.py  update.py  view.py
src/web_client/gui/controller/: networking.py  update.py
src/web_client/gui/state/: state.py
src/web_client/gui/view/: dashboard.py  graphics_widget.py  player_view.py  side_panel.py  view.py
src/web_client/gui/view/player_view/: graphics_widget.py  player_image.py  player_view.py
